# GuessWork

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt
app/: camera_config_tool.cpp  posest_daemon.cpp
cmake/: FindKimeraVIO.cmake
config/: cameras.xml
docs/features/: apriltag-pipeline.md  camera-calibration-implementation-plan.md  camera-calibration-status.md  camera-calibration-w2-plan.md  camera-calibration-w3-plan.md  camera-calibration-w5-plan.md  camera-calibration-w6-plan.md  camera-producer.md  fusion-service.md  kimera-vio-status.md  producer-consumer-architecture.md  teensy-hardware-interface.md
docs/ignore_this_folder/: feature_plan.md  ignore.md  todo.md
firmware/teensy41/: README.md  platformio.ini
firmware/teensy41/include/: Bmi088Imu.h  ByteCodec.h  CameraTriggerScheduler.h  CanBridge.h  CanSchema.h  FirmwareConfig.h  Protocol.h  Vl53l4cdToF.h
firmware/teensy41/lib/BMI08x_SensorAPI/: library.json
firmware/teensy41/src/: Bmi088Imu.cpp  CameraTriggerScheduler.cpp  CanBridge.cpp  Protocol.cpp  Vl53l4cdToF.cpp  main.cpp
firmware/teensy41/test/test_bmi088_imu/: test_bmi088_imu.cpp
firmware/teensy41/test/test_camera_trigger_scheduler/: test_camera_trigger_scheduler.cpp
firmware/teensy41/test/test_canbridge/: test_canbridge.cpp
firmware/teensy41/test/test_protocol/: test_protocol.cpp
firmware/teensy41/test/test_vl53l4cd/: test_vl53l4cd.cpp
include/posest/: CameraCapabilities.h  CameraConfig.h  CameraProducer.h  CameraTriggerCache.h  ConsumerBase.h  Frame.h  ICameraConfigSource.h  IFrameConsumer.h  IFrameProducer.h  LatestFrameSlot.h  MeasurementBus.h  MeasurementTypes.h  MockCameraProducer.h  MockConsumer.h  MockProducer.h  ProducerBase.h  TeeSink.h  Timestamp.h  ToFSampleCache.h  V4L2DeviceEnumerator.h  V4L2Producer.h  XmlCameraConfigSource.h
include/posest/calibration/: CalibrationRecorder.h  CalibrationTargetWriter.h
include/posest/config/: CalibrationParsers.h  ConfigValidator.h  IConfigStore.h  InMemoryConfigStore.h  SqliteConfigStore.h  SqliteSchema.h
include/posest/fusion/: FusionService.h  IFusionOutputSink.h
include/posest/pipelines/: AprilTagPipeline.h  AprilTagPoseSolver.h  PipelineStats.h  PlaceholderPipelines.h  VisionPipelineBase.h
include/posest/runtime/: Daemon.h  Factories.h  IVisionPipeline.h  PipelineConfig.h  PipelineContextHelpers.h  ProductionFactories.h  RuntimeConfig.h  RuntimeGraph.h  TelemetrySnapshot.h  WebService.h
include/posest/teensy/: FakeSerialTransport.h  Protocol.h  SerialTransport.h  TeensyService.h  TimeSyncFilter.h
include/posest/util/: LatencyHistogram.h
include/posest/vio/: AirborneCovariance.h  FakeVioBackend.h  IVioBackend.h  KimeraParamWriter.h  KimeraVioConfig.h  KimeraVioConfigBuilder.h  KimeraVioConsumer.h  KimeraVioStats.h
scripts/: check_protocol_constants.py  install_kimera_deps.sh
scripts/kalibr/: make_rosbag.py
share/posest/kimera/: BackendParams.yaml  DisplayParams.yaml  FrontendParams.yaml  ImuParams.yaml  LcdParams.yaml  PipelineParams.yaml
src/calibration/: CalibrationRecorder.cpp  CalibrationTargetWriter.cpp
src/camera/: CameraConfig.cpp  CameraProducer.cpp  XmlCameraConfigSource.cpp
src/config/: CalibrationParsers.cpp  ConfigValidator.cpp  InMemoryConfigStore.cpp  SqliteConfigStore.cpp  SqliteSchema.cpp
src/core/: CameraTriggerCache.cpp  ConsumerBase.cpp  LatestFrameSlot.cpp  MeasurementBus.cpp  ProducerBase.cpp  ToFSampleCache.cpp
src/fusion/: FusionService.cpp
src/mock/: MockCameraProducer.cpp  MockConsumer.cpp  MockProducer.cpp
src/pipelines/: AprilTagPipeline.cpp  AprilTagPoseSolver.cpp  PlaceholderPipelines.cpp  VisionPipelineBase.cpp
src/runtime/: Daemon.cpp  ProductionFactories.cpp  RuntimeGraph.cpp  WebService.cpp
src/teensy/: FakeSerialTransport.cpp  Protocol.cpp  SerialTransport.cpp  TeensyService.cpp  TimeSyncFilter.cpp
src/v4l2/: V4L2DeviceEnumerator.cpp  V4L2Producer.cpp
src/vio/: AirborneCovariance.cpp  FakeVioBackend.cpp  KimeraBackend.cpp  KimeraParamWriter.cpp  KimeraStaticParams.h.in  KimeraVioConfigBuilder.cpp  KimeraVioConsumer.cpp
test/: test_airborne_covariance.cpp  test_apriltag_pose_solver.cpp  test_calibrate_end_to_end.cpp  test_calibration_parsers.cpp  test_calibration_recorder.cpp  test_calibration_target_writer.cpp  test_camera_config.cpp  test_camera_producer.cpp  test_camera_trigger_cache.cpp  test_config_schema.cpp  test_daemon.cpp  test_fusion_service.cpp  test_kalibr_dataset_lifecycle.cpp  test_kimera_backend.cpp  test_kimera_integration.cpp  test_kimera_param_writer.cpp  test_kimera_vio_consumer.cpp  test_latency_histogram.cpp  test_latest_frame_slot.cpp  test_measurement_bus.cpp  test_mock_pipeline.cpp  test_pipelines.cpp  test_producer_base.cpp  test_runtime_graph.cpp  test_tee_sink.cpp  test_teensy_protocol.cpp  test_teensy_protocol_golden.cpp  test_teensy_service.cpp  test_time_sync_filter.cpp  test_tof_sample_cache.cpp  test_v4l2_producer.cpp
test/fixtures/kalibr/: camchain-imucam_two_cameras.yaml  camchain_single_camera.yaml  camchain_two_cameras.yaml  results-cam_fail.txt  results-cam_pass.txt  results-cam_two_cameras.txt  results-imucam_missing_metrics.txt  results-imucam_pass.txt  results-imucam_two_cameras_fail.txt  results-imucam_two_cameras_pass.txt
